# arequest

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATION.md  PUBLISHING.md  README.md  READY_TO_PUBLISH.md  example_basic.py  example_requests_compatible.py  example_session.py  pyproject.toml
docs/: api.md  auth.md  client.md  index.md  parser.md
src/arequest/: __init__.py  auth.py  client.py  parser.py
tests/benchmarks/: __init__.py  benchmark_200_req_s.py  benchmark_httpbin_sequential.py  benchmark_vs_aiohttp.py  benchmark_vs_requests.py
